# docs/swagger.json
@@ -1367,6 +1367,59 @@
                 }
             }
         },
+        "/api/v1/dental/st/query": {
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "dental-Bill"
+                ],
+                "summary": "查询统计",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "团队id",
+                        "name": "teamId",
+                        "in": "header"
+                    },
+                    {
+                        "description": "body",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.StQueryReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\": 200, \"data\": [...]}",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/base.Resp"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/dental/summary-plan-day/create": {
             "post": {
                 "security": [
@@ -5506,6 +5559,10 @@
         "dto.BillDto": {
             "type": "object",
             "properties": {
+                "amount": {
+                    "description": "金额",
+                    "type": "string"
+                },
                 "brand": {
                     "description": "品牌",
                     "type": "integer"
@@ -5550,7 +5607,7 @@
                     "description": "1 普通 2 半口 3 全口",
                     "type": "integer"
                 },
-                "paidTotal": {
+                "paidAmount": {
                     "description": "已支付金额",
                     "type": "string"
                 },
@@ -5558,7 +5615,7 @@
                     "description": "预定回款日期",
                     "type": "string"
                 },
-                "realTotal": {
+                "realAmount": {
                     "description": "折后金额",
                     "type": "string"
                 },
@@ -5566,16 +5623,12 @@
                     "description": "团队id",
                     "type": "integer"
                 },
-                "total": {
-                    "description": "金额",
-                    "type": "string"
-                },
                 "tradeAt": {
                     "description": "交易日期",
                     "type": "string"
                 },
-                "tradeStatus": {
-                    "description": "交易类型 1 成交 2补尾款 3退款",
+                "tradeType": {
+                    "description": "交易类型 1 成交 2补尾款  3补上月欠款 10退款",
                     "type": "integer"
                 },
                 "userId": {
@@ -5595,8 +5648,8 @@
                     "description": "每页大小",
                     "type": "integer"
                 },
-                "tradeStatus": {
-                    "description": "交易类型 1 成交 2补尾款 3退款",
+                "tradeType": {
+                    "description": "交易类型 1 成交 2补尾款  3补上月欠款 10退款",
                     "type": "integer"
                 }
             }
@@ -5847,6 +5900,10 @@
         "dto.IdentifyBillDto": {
             "type": "object",
             "properties": {
+                "amount": {
+                    "description": "金额",
+                    "type": "string"
+                },
                 "brand": {
                     "description": "品牌",
                     "type": "integer"
@@ -5915,7 +5972,7 @@
                     "description": "1 普通 2 半口 3 全口",
                     "type": "integer"
                 },
-                "paidTotal": {
+                "paidAmount": {
                     "description": "已支付金额",
                     "type": "string"
                 },
@@ -5927,7 +5984,7 @@
                     "description": "种植项目",
                     "type": "string"
                 },
-                "realTotal": {
+                "realAmount": {
                     "description": "折后金额",
                     "type": "string"
                 },
@@ -5943,15 +6000,11 @@
                     "description": "团队id",
                     "type": "integer"
                 },
-                "total": {
-                    "description": "金额",
-                    "type": "string"
-                },
                 "tradeAt": {
                     "description": "交易日期",
                     "type": "string"
                 },
-                "tradeStatus": {
+                "tradeType": {
                     "description": "交易类型 1 成交 2补尾款  3补上月欠款 10退款",
                     "type": "integer"
                 },
@@ -6248,6 +6301,26 @@
                     "type": "string"
                 },
                 "deptPath": {
+                    "type": "string"
+                },
+                "teamId": {
+                    "type": "integer"
+                },
+                "userId": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.StQueryReq": {
+            "type": "object",
+            "properties": {
+                "begin": {
+                    "type": "string"
+                },
+                "deptPath": {
+                    "type": "string"
+                },
+                "end": {
                     "type": "string"
                 },
                 "teamId": {
@@ -7093,6 +7166,10 @@
         "models.Bill": {
             "type": "object",
             "properties": {
+                "amount": {
+                    "description": "金额",
+                    "type": "number"
+                },
                 "brand": {
                     "description": "品牌",
                     "type": "integer"
@@ -7108,6 +7185,10 @@
                 "customerId": {
                     "description": "顾客",
                     "type": "integer"
+                },
+                "debtAmount": {
+                    "description": "回收上月欠款",
+                    "type": "number"
                 },
                 "dentalCount": {
                     "description": "颗数",
@@ -7126,7 +7207,7 @@
                     "type": "integer"
                 },
                 "implant": {
-                    "description": "是否已种",
+                    "description": "种植状态：1 未种 2部分 3已种",
                     "type": "integer"
                 },
                 "implantDate": {
@@ -7153,7 +7234,7 @@
                     "description": "1 普通 2 半口 3 全口",
                     "type": "integer"
                 },
-                "paidTotal": {
+                "paidAmount": {
                     "description": "已支付金额",
                     "type": "number"
                 },
@@ -7165,8 +7246,12 @@
                     "description": "种植项目",
                     "type": "string"
                 },
-                "realTotal": {
+                "realAmount": {
                     "description": "折后金额",
+                    "type": "number"
+                },
+                "refundAmount": {
+                    "description": "退款",
                     "type": "number"
                 },
                 "remark": {
@@ -7181,15 +7266,11 @@
                     "description": "团队id",
                     "type": "integer"
                 },
-                "total": {
-                    "description": "金额",
-                    "type": "number"
-                },
                 "tradeAt": {
                     "description": "交易日期",
                     "type": "string"
                 },
-                "tradeStatus": {
+                "tradeType": {
                     "description": "交易类型 1 成交 2补尾款  3补上月欠款 10退款",
                     "type": "integer"
                 },
@@ -7301,7 +7382,7 @@
                 },
                 "day": {
                     "description": "时间",
-                    "type": "integer"
+                    "type": "string"
                 },
                 "deal": {
                     "description": "成交",
@@ -7332,7 +7413,7 @@
                     "type": "integer"
                 },
                 "rest": {
-                    "description": "休息",
+                    "description": "1上班 2休息",
                     "type": "integer"
                 },
                 "teamId": {
@@ -8074,6 +8155,10 @@
                 },
                 "newCustomerCnt": {
                     "description": "留存任务",
+                    "type": "integer"
+                },
+                "taskType": {
+                    "description": "任务类型 1正式 算人员数量",
                     "type": "integer"
                 },
                 "teamId": {
